# portfolio-builder

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  roadmap.md
scripts/: clear_cached_ticker.py  inspect_cache.py  inspect_db.py  smoke_prices.py  smoke_returns.py
src/portfolio_builder/: cli.py
src/portfolio_builder/analytics/: optimizer.py  performance.py  portfolio.py  returns.py
src/portfolio_builder/dashboard/: app.py  charts.py
src/portfolio_builder/data/: db.py  models.py  price_service.py  provider.py  repository.py
tests/: test_optimizer.py  test_performance.py  test_returns.py
